plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }
}

repositories {
    mavenCentral()
}

dependencies{
    implementation 'org.xerial:sqlite-jdbc:3.51.1.0'
    implementation 'org.postgresql:postgresql:42.7.8'
    implementation 'com.h2database:h2:2.2.224'
    implementation 'org.yaml:snakeyaml:2.5'
    implementation 'ch.qos.logback:logback-classic:1.5.21'
}

application {
    mainClass.set('by.gsu.olaksen.MainApp')
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics','--enable-native-access=ALL-UNNAMED']
}

javafx {
    version = '25.0.1'
    modules = ['javafx.controls','javafx.fxml']
}